# c2

./: .gitignore  CMakeLists.txt  TODO.org  allocvars.c  allocvars.h  asm-ast.c  asm-ast.h  ast.c  ast.h  backsym.c  backsym.h  bitmath.c  bitmath.h  cc.c  codegen.c  codegen.h  constant.c  constant.h  emitcode.c  emitcode.h  errors.c  errors.h  fileline.c  fileline.h  fixoperands.c  fixoperands.h  goto.c  goto.h  hashtab.c  hashtab.h  ice.c  ice.h  lexer.c  lexer.h  list.c  list.h  looplabel.c  looplabel.h  mempool.c  mempool.h  (+32 more)
suite/: foo.c  run-tests
suite/tests/assign/invalid/: assign-to-const.c  test.json  undeclared.c
suite/tests/assign/valid/: assign-rassoc.c  assign-then-init.c  binary-var.c  cassign_add.c  cassign_and.c  cassign_divide.c  cassign_lshift.c  cassign_modulo.c  cassign_multiply.c  cassign_or.c  cassign_rshift.c  cassign_subtract.c  cassign_xor.c  simple.c  test.json  unary-var.c  use-var-in-its-own-init.c
suite/tests/basics/invalid/: bad-hex.c  bad-octal.c  no-digits.c  test.json
suite/tests/basics/valid/: hex.c  octal.c  return-2  simple  test.json
suite/tests/binary/invalid/: parse-adjacent-bops.c  parse-unbal-parens.c  test.json
suite/tests/binary/valid/: bin-add.c  bin-div.c  bin-modulo.c  bin-mul.c  bin-signed-div.c  bin-signed-div2.c  bin-sub.c  comp-add.c  lex-binary.c  parse-arith-parens.c  prec-1.c  test.json
suite/tests/bitwise/invalid/: shift-double.c  test.json  xor-double.c
suite/tests/bitwise/valid/: bit-and-over-xor.c  bit-xor-over-or.c  (+8 more)
suite/tests/locals/: simple.c
suite/utils/: .gdb_history  Makefile  rsp.s  utils.h
(+167 files in other folders)
